@startuml Diagrama_ER_Sistema_Docentes
!theme plain
hide circle
skinparam linetype ortho

' ===================================
' PAQUETE: AUTENTICACIÓN Y USUARIOS
' ===================================
package "Autenticación y Usuarios" {
  entity "users" as users {
    *id : bigint <<PK>>
    --
    *name : varchar
    *email : varchar
    *password : varchar
    email_verified_at : timestamp
    created_at : timestamp
    updated_at : timestamp
  }

  entity "profiles" as profiles {
    *id : bigint <<PK>>
    --
    *user_id : bigint <<FK>>
    phone : varchar
    position : varchar
    about : text
    avatar : varchar
    is_active : boolean
  }

  entity "roles" as roles {
    *id : bigint <<PK>>
    --
    *name : varchar
    *guard_name : varchar
  }

  entity "permissions" as permissions {
    *id : bigint <<PK>>
    --
    *name : varchar
    *guard_name : varchar
  }

  entity "model_has_roles" as model_has_roles {
    *role_id : bigint <<FK>>
    *model_type : varchar
    *model_id : bigint <<FK>>
  }

  entity "role_has_permissions" as role_has_permissions {
    *permission_id : bigint <<FK>>
    *role_id : bigint <<FK>>
  }

  entity "model_has_permissions" as model_has_permissions {
    *permission_id : bigint <<FK>>
    *model_type : varchar
    *model_id : bigint <<FK>>
  }
}

' ===================================
' PAQUETE: GESTIÓN DE PROYECTOS
' ===================================
package "Gestión de Proyectos" {
  entity "projects" as projects {
    *id : bigint <<PK>>
    --
    *user_id : bigint <<FK>>
    *category_id : bigint <<FK>>
    *title : varchar
    description : text
    objectives : text
    start_date : date
    end_date : date
    status : enum
    budget : decimal
    completion_percentage : int
  }

  entity "categories" as categories {
    *id : bigint <<PK>>
    --
    *name : varchar
    description : text
  }

  entity "tasks" as tasks {
    *id : bigint <<PK>>
    --
    *project_id : bigint <<FK>>
    *assigned_to : bigint <<FK>>
    *title : varchar
    description : text
    due_date : date
    status : enum
    priority : enum
    completion_date : datetime
  }

  entity "project_user" as project_user {
    *project_id : bigint <<FK>>
    *user_id : bigint <<FK>>
    role : varchar
  }

  entity "task_user" as task_user {
    *task_id : bigint <<FK>>
    *user_id : bigint <<FK>>
  }
}

' ===================================
' PAQUETE: GESTIÓN DE INNOVACIÓN
' ===================================
package "Innovación" {
  entity "innovations" as innovations {
    *id : bigint <<PK>>
    --
    *user_id : bigint <<FK>>
    *innovation_type_id : bigint <<FK>>
    *title : varchar
    description : text
    status : enum
    impact_score : int
    methodology : text
    expected_results : text
  }

  entity "innovation_types" as innovation_types {
    *id : bigint <<PK>>
    --
    *name : varchar
    description : text
  }

  entity "evaluations" as evaluations {
    *id : bigint <<PK>>
    --
    *project_id : bigint <<FK>>
    *evaluator_id : bigint <<FK>>
    relevance_score : int
    methodology_score : int
    innovation_score : int
    results_score : int
    impact_score : int
    comments : text
  }
}

' ===================================
' PAQUETE: RECURSOS Y REUNIONES
' ===================================
package "Recursos y Reuniones" {
  entity "meetings" as meetings {
    *id : bigint <<PK>>
    --
    *project_id : bigint <<FK>>
    *created_by : bigint <<FK>>
    title : varchar
    description : text
    scheduled_at : datetime
    status : enum
  }

  entity "meeting_user" as meeting_user {
    *meeting_id : bigint <<FK>>
    *user_id : bigint <<FK>>
    attendance : enum
  }

  entity "resources" as resources {
    *id : bigint <<PK>>
    --
    *resource_type_id : bigint <<FK>>
    *name : varchar
    unit_cost : decimal
  }

  entity "resource_types" as resource_types {
    *id : bigint <<PK>>
    --
    *name : varchar
  }

  entity "project_resource" as project_resource {
    *project_id : bigint <<FK>>
    *resource_id : bigint <<FK>>
    quantity : int
    assigned_date : date
  }
}

' ===================================
' PAQUETE: COMUNICACIÓN Y ADJUNTOS
' ===================================
package "Comunicación y Sistema" {
  entity "comments" as comments {
    *id : bigint <<PK>>
    --
    *project_id : bigint <<FK>>
    *user_id : bigint <<FK>>
    content : text
  }

  entity "messages" as messages {
    *id : bigint <<PK>>
    --
    *sender_id : bigint <<FK>>
    *receiver_id : bigint <<FK>>
    content : text
    read_at : datetime
  }

  entity "forum_topics" as forum_topics {
    *id : bigint <<PK>>
    --
    *user_id : bigint <<FK>>
    *title : varchar
    content : text
  }

  entity "forum_posts" as forum_posts {
    *id : bigint <<PK>>
    --
    *topic_id : bigint <<FK>>
    *user_id : bigint <<FK>>
    content : text
  }

  entity "attachments" as attachments {
    *id : bigint <<PK>>
    --
    *uploaded_by : bigint <<FK>>
    *attachable_id : int
    *attachable_type : varchar
    filename : varchar
    path : varchar
  }

  entity "notifications" as notifications {
    *id : uuid <<PK>>
    --
    *notifiable_id : int
    *notifiable_type : varchar
    type : varchar
    data : json
    read_at : timestamp
  }
}

' ===================================
' RELACIONES Y CARDINALIDADES
' ===================================

' Usuarios y Perfiles (1 a 1)
users ||..|| profiles : "tiene"

' Roles y Permisos (Muchos a Muchos via Pivot)
roles ||..o{ model_has_roles
model_has_roles }o..|| users : "asignado a"
roles ||..o{ role_has_permissions
role_has_permissions }o..|| permissions : "contiene"
users ||..o{ model_has_permissions : "tiene permisos directos"
model_has_permissions }o..|| permissions

' Proyectos (1 a Muchos)
users ||..o{ projects : "crea (owner)"
categories ||..o{ projects : "clasifica"

' Equipo de Proyecto (Muchos a Muchos)
projects ||..o{ project_user
project_user }o..|| users : "es miembro de"

' Tareas (1 a Muchos y Asignación)
projects ||..o{ tasks : "tiene"
users ||..o{ tasks : "responsable principal"
tasks ||..o{ task_user
task_user }o..|| users : "colaboradores"

' Innovaciones
users ||..o{ innovations : "propone"
innovation_types ||..o{ innovations : "clasifica"

' Evaluaciones
projects ||..o{ evaluations : "es evaluado"
users ||..o{ evaluations : "realiza (evaluador)"

' Reuniones (1 a Muchos y Asistencia)
projects ||..o{ meetings : "agenda"
users ||..o{ meetings : "organiza"
meetings ||..o{ meeting_user
meeting_user }o..|| users : "asiste"

' Recursos
resource_types ||..o{ resources : "tipo"
projects ||..o{ project_resource
project_resource }o..|| resources : "utiliza"

' Comunicación
users ||..o{ comments : "comenta en proyectos"
projects ||..o{ comments
users ||..o{ messages : "envía/recibe"
users ||..o{ forum_topics : "inicia tema"
forum_topics ||..o{ forum_posts : "tiene respuestas"
users ||..o{ forum_posts : "responde"

' Adjuntos (Polimórfica - simplificada visualmente)
users ||..o{ attachments : "sube"
projects |o..o{ attachments : "tiene"
tasks |o..o{ attachments : "tiene"
innovations |o..o{ attachments : "tiene"

@enduml
